--- a/ShellScript/ShellScript.csproj
+++ b/ShellScript/ShellScript.csproj
@@ -12,4 +12,6 @@
 
     <Import Project="..\ShellScript.Unix.Bash\ShellScript.Unix.Bash.projitems" Label="Shared" />
 
+    <Import Project="..\ShellScript.Luncher\ShellScript.Luncher.projitems" Label="Shared" />
+
 </Project>
