Adding Pre-Processors

--- a/ShellScript.MSTest/ShellScript.MSTest.csproj
+++ b/ShellScript.MSTest/ShellScript.MSTest.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\ShellScript\ShellScript.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="TestScripts\Expressions" />
+    </ItemGroup>
+
 </Project>
