--- a/ShellScript/ShellScript.csproj
+++ b/ShellScript/ShellScript.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Shared" />
       <Folder Include="Windows.Batch" />
     </ItemGroup>
 
